--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -159,6 +159,7 @@ display: flex;
 .event-header *:not(.event-title) {
     font-size: 1.5rem;
 }
+.event-header .event-title > span { font-size: 3rem;text-transform: uppercase;}
 .event-user {
     margin-left: auto;
     /* justify-content: space-around; */
@@ -199,6 +200,10 @@ display: flex;
     /* display:flex; */
     flex-direction: column;
     gap: 2rem;
+}
+
+.event-list-main a, .event-details-main h1 {
+    text-transform: uppercase;
 }
 .event-details-main h1 {
     /* background: yellowgreen; */
